# ThreeBodySystemAnimation

./: .gitignore  README.md
interactive/: CMakeLists.txt  main.cpp  three_body.h
original/: main.cpp
